--- a/ios-messaging-app/Base.lproj/Main.storyboard
+++ b/ios-messaging-app/Base.lproj/Main.storyboard
@@ -22,21 +22,21 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="503"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="126" id="h1n-b6-BBA" customClass="MainTableViewCell" customModule="ios_messaging_app" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="126"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="84" id="h1n-b6-BBA" customClass="MainTableViewCell" customModule="ios_messaging_app" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="84"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h1n-b6-BBA" id="v64-fa-OY0">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="125.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="83.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sIh-kA-ccf">
-                                                    <rect key="frame" x="10" y="0.0" width="355" height="18"/>
+                                                    <rect key="frame" x="10" y="10" width="355" height="18"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nbb-L4-bI7">
-                                                    <rect key="frame" x="10" y="20" width="355" height="95.5"/>
+                                                    <rect key="frame" x="10" y="28" width="355" height="55.5"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -45,13 +45,13 @@
                                                 </textView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="nbb-L4-bI7" secondAttribute="bottom" constant="10" id="06d-Zg-gUY"/>
-                                                <constraint firstItem="nbb-L4-bI7" firstAttribute="leading" secondItem="v64-fa-OY0" secondAttribute="leading" constant="10" id="4wA-E0-BdB"/>
-                                                <constraint firstAttribute="trailing" secondItem="sIh-kA-ccf" secondAttribute="trailing" constant="10" id="HwT-vy-pXg"/>
-                                                <constraint firstItem="sIh-kA-ccf" firstAttribute="leading" secondItem="v64-fa-OY0" secondAttribute="leading" constant="10" id="dYO-Iv-eJT"/>
-                                                <constraint firstItem="nbb-L4-bI7" firstAttribute="top" secondItem="v64-fa-OY0" secondAttribute="top" constant="20" id="htU-SY-xRM"/>
-                                                <constraint firstAttribute="trailing" secondItem="nbb-L4-bI7" secondAttribute="trailing" constant="10" id="nfe-y5-ibE"/>
-                                                <constraint firstItem="sIh-kA-ccf" firstAttribute="top" secondItem="v64-fa-OY0" secondAttribute="top" id="tLZ-FR-qbY"/>
+                                                <constraint firstItem="sIh-kA-ccf" firstAttribute="leading" secondItem="v64-fa-OY0" secondAttribute="leading" constant="10" id="6de-p4-7lK"/>
+                                                <constraint firstItem="nbb-L4-bI7" firstAttribute="leading" secondItem="v64-fa-OY0" secondAttribute="leading" constant="10" id="7Ky-8Y-TYO"/>
+                                                <constraint firstAttribute="trailing" secondItem="sIh-kA-ccf" secondAttribute="trailing" constant="10" id="G9C-XP-wcr"/>
+                                                <constraint firstAttribute="bottom" secondItem="nbb-L4-bI7" secondAttribute="bottom" id="Mhq-oh-d7L"/>
+                                                <constraint firstItem="sIh-kA-ccf" firstAttribute="top" secondItem="v64-fa-OY0" secondAttribute="top" constant="10" id="q8z-ra-O3a"/>
+                                                <constraint firstAttribute="trailing" secondItem="nbb-L4-bI7" secondAttribute="trailing" constant="10" id="x1a-Nh-wiQ"/>
+                                                <constraint firstItem="nbb-L4-bI7" firstAttribute="top" secondItem="sIh-kA-ccf" secondAttribute="bottom" id="xd7-lb-KDK"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -77,7 +77,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDu-9I-00s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="341.60000000000002" y="762.36881559220399"/>
+            <point key="canvasLocation" x="1068" y="696"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="ryy-qZ-yp1">
+            <objects>
+                <viewController id="iPR-l2-73Y" customClass="LoginViewController" customModule="ios_messaging_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EvC-2l-pNo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T3a-mT-pYj" customClass="GIDSignInButton">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Signed In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gft-1C-zQC">
+                                <rect key="frame" x="136" y="586" width="103.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Gft-1C-zQC" firstAttribute="centerX" secondItem="EvC-2l-pNo" secondAttribute="centerX" id="3Vc-c1-Sh5"/>
+                            <constraint firstItem="T3a-mT-pYj" firstAttribute="centerY" secondItem="EvC-2l-pNo" secondAttribute="centerY" id="Dpf-0y-AGU"/>
+                            <constraint firstItem="T3a-mT-pYj" firstAttribute="centerX" secondItem="EvC-2l-pNo" secondAttribute="centerX" id="UPJ-gT-DdQ"/>
+                            <constraint firstItem="pm4-kq-Aga" firstAttribute="bottom" secondItem="Gft-1C-zQC" secondAttribute="bottom" constant="60" id="UYp-q2-475"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pm4-kq-Aga"/>
+                    </view>
+                    <connections>
+                        <outlet property="loginLabel" destination="Gft-1C-zQC" id="95h-a7-efu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="opC-A9-dfZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="118" y="683"/>
         </scene>
         <!--Messages-->
         <scene sceneID="Jsf-ax-HP9">
@@ -155,7 +191,7 @@
                 <splitViewController id="Hpa-aF-WHq" sceneMemberID="viewController">
                     <connections>
                         <segue destination="pSX-fs-jVb" kind="relationship" relationship="masterViewController" id="YvL-5d-C6i"/>
-                        <segue destination="hxr-22-YDj" kind="relationship" relationship="detailViewController" id="hZJ-TM-9YE"/>
+                        <segue destination="iPR-l2-73Y" kind="relationship" relationship="detailViewController" id="uJ7-1Z-9dR"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RX0-we-Jcx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -163,7 +199,4 @@
             <point key="canvasLocation" x="-836" y="272"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="80C-vN-Gpv"/>
-    </inferredMetricsTieBreakers>
 </document>
