--- a/ios-messaging-app/Base.lproj/Main.storyboard
+++ b/ios-messaging-app/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nbb-L4-bI7">
-                                                            <rect key="frame" x="10" y="28" width="355" height="117.5"/>
+                                                            <rect key="frame" x="10" y="28" width="355" height="118"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -134,7 +134,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T3a-mT-pYj" customClass="GIDSignInButton">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <rect key="frame" x="109" y="467" width="156" height="85"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Signed In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gft-1C-zQC">
@@ -143,13 +143,18 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="messages-120.png" translatesAutoresizingMaskIntoConstraints="NO" id="ViA-IS-0SG">
+                                <rect key="frame" x="127.5" y="273.5" width="120" height="120"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Gft-1C-zQC" firstAttribute="centerX" secondItem="EvC-2l-pNo" secondAttribute="centerX" id="3Vc-c1-Sh5"/>
-                            <constraint firstItem="T3a-mT-pYj" firstAttribute="centerY" secondItem="EvC-2l-pNo" secondAttribute="centerY" id="Dpf-0y-AGU"/>
-                            <constraint firstItem="T3a-mT-pYj" firstAttribute="centerX" secondItem="EvC-2l-pNo" secondAttribute="centerX" id="UPJ-gT-DdQ"/>
+                            <constraint firstItem="T3a-mT-pYj" firstAttribute="centerX" secondItem="EvC-2l-pNo" secondAttribute="centerX" id="3pp-wz-yoD"/>
+                            <constraint firstItem="ViA-IS-0SG" firstAttribute="centerX" secondItem="EvC-2l-pNo" secondAttribute="centerX" id="DIl-Xb-qmi"/>
                             <constraint firstItem="pm4-kq-Aga" firstAttribute="bottom" secondItem="Gft-1C-zQC" secondAttribute="bottom" constant="60" id="UYp-q2-475"/>
+                            <constraint firstItem="ViA-IS-0SG" firstAttribute="centerY" secondItem="EvC-2l-pNo" secondAttribute="centerY" id="aCg-CS-tdI"/>
+                            <constraint firstItem="Gft-1C-zQC" firstAttribute="top" secondItem="T3a-mT-pYj" secondAttribute="bottom" constant="30" id="znd-6i-nrx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pm4-kq-Aga"/>
                     </view>
@@ -160,7 +165,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="opC-A9-dfZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="118" y="683"/>
+            <point key="canvasLocation" x="117.59999999999999" y="682.3088455772114"/>
         </scene>
         <!--Messages-->
         <scene sceneID="Jsf-ax-HP9">
@@ -190,10 +195,19 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user-icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="IFW-5b-whM">
+                                            <rect key="frame" x="8" y="8" width="48" height="48"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="48" id="HmN-Lg-PTF"/>
+                                                <constraint firstAttribute="width" constant="48" id="OLB-O3-O4w"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="LdA-kg-PBW" firstAttribute="top" secondItem="6K2-IR-AMF" secondAttribute="bottom" constant="5" id="0jt-W1-u1j"/>
+                                        <constraint firstItem="IFW-5b-whM" firstAttribute="leading" secondItem="ZKM-xA-ONI" secondAttribute="leading" constant="8" id="993-MR-OgC"/>
                                         <constraint firstItem="6K2-IR-AMF" firstAttribute="leading" secondItem="ZKM-xA-ONI" secondAttribute="leadingMargin" constant="50" id="9LW-Gc-iAJ"/>
+                                        <constraint firstItem="IFW-5b-whM" firstAttribute="top" secondItem="ZKM-xA-ONI" secondAttribute="top" constant="8" id="ELJ-yS-qh2"/>
                                         <constraint firstItem="6K2-IR-AMF" firstAttribute="top" secondItem="ZKM-xA-ONI" secondAttribute="topMargin" id="Fsf-Ki-9Sf"/>
                                         <constraint firstItem="LdA-kg-PBW" firstAttribute="leading" secondItem="ZKM-xA-ONI" secondAttribute="leadingMargin" constant="50" id="p08-g0-ffK"/>
                                     </constraints>
@@ -214,7 +228,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="le9-D3-AkR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1068" y="-61"/>
+            <point key="canvasLocation" x="1068" y="-61.619190404797607"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vXw-kV-gIA">
@@ -246,4 +260,8 @@
             <point key="canvasLocation" x="-836" y="272"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="messages-120.png" width="120" height="120"/>
+        <image name="user-icon.png" width="500" height="466"/>
+    </resources>
 </document>
