--- a/ios-messaging-app/Base.lproj/LaunchScreen.storyboard
+++ b/ios-messaging-app/Base.lproj/LaunchScreen.storyboard
@@ -19,21 +19,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WKI-af-rCZ">
-                                <rect key="frame" x="127.5" y="261.5" width="120" height="144"/>
+                                <rect key="frame" x="104" y="235.5" width="167" height="196"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="messages-120.png" translatesAutoresizingMaskIntoConstraints="NO" id="NfE-lS-zSt">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="167" height="167"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iMessenger" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nVg-Om-UAc">
-                                        <rect key="frame" x="0.0" y="120" width="120" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="0.0" y="167" width="167" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.66862648725509644" green="0.66715919971466064" blue="0.99803286790847778" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="WKI-af-rCZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EBQ-hT-nZD"/>
                             <constraint firstItem="WKI-af-rCZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="HGV-rD-n7I"/>
@@ -47,6 +47,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="messages-120.png" width="120" height="120"/>
+        <image name="messages-120.png" width="167" height="167"/>
     </resources>
 </document>
